tooling/nargo_cli/tests/snapshots/execution_success/unrolling_regression_8333/execute__tests__force_brillig_false_inliner_9223372036854775807.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 2,
        "type": {
          "kind": "array",
          "length": 32,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 8
          }
        }
      },
      "visibility": "public"
    },
    "error_types": {}
  },
  "bytecode": [
    "func 0",
    "current witness index : _63",
    "private parameters indices : []",
    "public parameters indices : []",
    "return value indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10, _11, _12, _13, _14, _15, _16, _17, _18, _19, _20, _21, _22, _23, _24, _25, _26, _27, _28, _29, _30, _31, _32, _33, _34, _35, _36, _37, _38, _39, _40, _41, _42, _43, _44, _45, _46, _47, _48, _49, _50, _51, _52, _53, _54, _55, _56, _57, _58, _59, _60, _61, _62, _63]",
    "EXPR [ (1, _0) 0 ]",
    "EXPR [ (1, _1) 0 ]",
    "EXPR [ (1, _2) 0 ]",
    "EXPR [ (1, _3) 0 ]",
    "EXPR [ (1, _4) 0 ]",
    "EXPR [ (1, _5) 0 ]",
    "EXPR [ (1, _6) 0 ]",
    "EXPR [ (1, _7) 0 ]",
    "EXPR [ (1, _8) 0 ]",
    "EXPR [ (1, _9) 0 ]",
    "EXPR [ (1, _10) 0 ]",
    "EXPR [ (1, _11) 0 ]",
    "EXPR [ (1, _12) 0 ]",
    "EXPR [ (1, _13) 0 ]",
    "EXPR [ (1, _14) 0 ]",
    "EXPR [ (1, _15) 0 ]",
    "EXPR [ (1, _16) 0 ]",
    "EXPR [ (1, _17) 0 ]",
    "EXPR [ (1, _18) 0 ]",
    "EXPR [ (1, _19) 0 ]",
    "EXPR [ (1, _20) 0 ]",
    "EXPR [ (1, _21) 0 ]",
    "EXPR [ (1, _22) 0 ]",
    "EXPR [ (1, _23) 0 ]",
    "EXPR [ (1, _24) 0 ]",
    "EXPR [ (1, _25) 0 ]",
    "EXPR [ (1, _26) 0 ]",
    "EXPR [ (1, _27) 0 ]",
    "EXPR [ (1, _28) 0 ]",
    "EXPR [ (1, _29) 0 ]",
    "EXPR [ (1, _30) 0 ]",
    "EXPR [ (1, _31) 0 ]",
    "EXPR [ (1, _32) 0 ]",
    "EXPR [ (1, _33) 0 ]",
    "EXPR [ (1, _34) 0 ]",
    "EXPR [ (1, _35) 0 ]",
    "EXPR [ (1, _36) 0 ]",
    "EXPR [ (1, _37) 0 ]",
    "EXPR [ (1, _38) 0 ]",
    "EXPR [ (1, _39) 0 ]",
    "EXPR [ (1, _40) 0 ]",
    "EXPR [ (1, _41) 0 ]",
    "EXPR [ (1, _42) 0 ]",
    "EXPR [ (1, _43) 0 ]",
    "EXPR [ (1, _44) 0 ]",
    "EXPR [ (1, _45) 0 ]",
    "EXPR [ (1, _46) 0 ]",
    "EXPR [ (1, _47) 0 ]",
    "EXPR [ (1, _48) 0 ]",
    "EXPR [ (1, _49) 0 ]",
    "EXPR [ (1, _50) 0 ]",
    "EXPR [ (1, _51) 0 ]",
    "EXPR [ (1, _52) 0 ]",
    "EXPR [ (1, _53) 0 ]",
    "EXPR [ (1, _54) 0 ]",
    "EXPR [ (1, _55) 0 ]",
    "EXPR [ (1, _56) 0 ]",
    "EXPR [ (1, _57) 0 ]",
    "EXPR [ (1, _58) 0 ]",
    "EXPR [ (1, _59) 0 ]",
    "EXPR [ (1, _60) 0 ]",
    "EXPR [ (1, _61) 0 ]",
    "EXPR [ (1, _62) 0 ]",
    "EXPR [ (1, _63) 0 ]"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "expression_width": {
    "Bounded": {
      "width": 4
    }
  }
}
